--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 PORT = 8080
 DEV_MODE = development
-MONGODB_URL = mongodb+srv://suryamani91228083:<password>@cluster0.v1n35g3.mongodb.net/library-managment-app
+MONGODB_URL=mongodb+srv://root:root@cluster0.she7rld.mongodb.net/library-managment-app?retryWrites=true&w=majority
+# MONGODB_URL = mongodb+srv://suryamani91228083:Suryamani752@cluster0.v1n35g3.mongodb.net/library-managment-app
 JWT_SECRET = XYZ123
