--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
       { "src": "script.js", "use": "@vercel/node" }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "/index.js" }
+      { "src": "/(.*)", "dest": "/server.js" }
     ]
   }
   
