--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^2.1.3"
+    "react-scripts": "^2.1.3",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "gh-pages": "^6.0.0"
