--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "build": "^0.1.4",
     "chai": "^4.3.8",
     "chai-http": "^4.4.0",
     "colors": "^1.4.0",
